Added faq section - dekstop version

--- a/index.html
+++ b/index.html
@@ -1271,5 +1271,35 @@
           <img src="/assets/visuals/testimonial-logo.svg" alt="FIVE">
         </div>
       </section>
+      <section class="faq-section">
+        <div class="faq-visual">
+          <img src="/assets/visuals/FAQ-visual.png" alt="">
+        </div>
+        <div class="faq-copy">
+          <h6>FAQ</h6>
+          <h2>We’re here to <span>help.</span></h2>
+          <div class="faq-copy-questions">
+            <p>Treba li imati svoj laptop za radionicu?</p>
+          </div>
+          <div class="faq-copy-questions">
+            <p>Treba li predznanje za radionicu?</p>
+          </div>
+          <div class="faq-copy-questions">
+            <p>Treba li instalirat neke programe na laptop prije radionice<p>
+          </div>
+          <div class="faq-copy-questions">
+            <p>Priko čega sve mogu gledati stream?</p>
+          </div>
+          <div class="faq-copy-questions">
+            <p>Jesu li radionice/fly talks samo uživo?</p>
+          </div>
+          <div class="faq-copy-questions">
+            <p>Discord - kad se može ući na to i kako?</p>
+          </div>
+          <div class="faq-copy-questions">
+            <p>Zašto se ne mogu prijaviti mailom i šifrom od prošle godine?</p>
+          </div>
+        </div>
+      </section>
   </body>
 </html>
