Added footer section - dekstop version

--- a/index.html
+++ b/index.html
@@ -1268,12 +1268,12 @@
             vrata! DUMP Daysi će mi uvijek ostati u sjećanju kao jedan od najdražih angažmana
             kao predavača!
           </p>
-          <img src="/assets/visuals/testimonial-logo.svg" alt="FIVE">
+          <img src="./assets/visuals/testimonial-logo.svg" alt="FIVE">
         </div>
       </section>
       <section class="faq-section">
         <div class="faq-visual">
-          <img src="/assets/visuals/FAQ-visual.png" alt="">
+          <img src="./assets/visuals/FAQ-visual.png" alt="">
         </div>
         <div class="faq-copy">
           <h6>FAQ</h6>
@@ -1285,7 +1285,7 @@
             <p>Treba li predznanje za radionicu?</p>
           </div>
           <div class="faq-copy-questions">
-            <p>Treba li instalirat neke programe na laptop prije radionice<p>
+            <p>Treba li instalirat neke programe na laptop prije radionice?<p>
           </div>
           <div class="faq-copy-questions">
             <p>Priko čega sve mogu gledati stream?</p>
@@ -1301,5 +1301,35 @@
           </div>
         </div>
       </section>
+      <footer class="footer-section">
+        <hr>
+        <div class="footer-content">
+          <div class="footer-rights">
+            © 2021 DUMP Days. Sva prava pridržana.
+          </div>
+          <div class="footer-link">
+            <a href="https://days.dump.hr/">DUMP Days 2021</a>
+          </div>
+          <div class="footer-logos">
+            <div class="social-media">
+              <a href="https://www.facebook.com/dump.hr">
+                <img src="./assets/visuals/facebook-logo.png" alt="Facebook">
+              </a>
+              <a href="https://www.instagram.com/dumpovci/">
+                <img src="./assets/visuals/instagram-logo.png" alt="Instagram">
+              </a>
+              <a href="https://www.youtube.com/@dumpovci">
+                <img src="./assets/visuals/youtube-logo.png" alt="YouTube">
+              </a>
+              <a href="https://www.linkedin.com/">
+                <img src="./assets/visuals/linkedin-logo.png" alt="LinkedIn">
+              </a>
+            </div>
+            <div>
+              <img src="./assets/visuals/DUMP-logo.svg" alt="dump">
+            </div>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
