add form section

--- a/index.html
+++ b/index.html
@@ -960,5 +960,26 @@
         </div>
       </div>
     </section>
+    <section class="form">
+      <header>
+        <h1 class="form-header">Imaš još pitanja?</h1>
+        <p class="form-p">Javi nam se, uvijek provjeravamo inbox</p>
+        <div class="icons-wrapper">
+          <img src="assets/images/fb.svg" />
+          <img src="assets/images/instagram.svg" />
+          <img src="assets/images/mail.svg" />
+        </div>
+        <form class="form-form">
+          <input placeholder="Što te zanima?" />
+          <input placeholder="Ime i prezime" />
+          <input placeholder="Email" />
+          <input placeholder="Poruka" />
+          <div class="p-button-holder">
+            <p>0/1000</p>
+            <button>POŠALJI</button>
+          </div>
+        </form>
+      </header>
+    </section>
   </body>
 </html>
