fixed review comments

--- a/index.html
+++ b/index.html
@@ -1281,21 +1281,27 @@
         <div class="faq-copy-questions">
           <p>Treba li imati svoj laptop za radionicu?</p>
         </div>
+        <hr class="faq-separator">
         <div class="faq-copy-questions">
           <p>Treba li predznanje za radionicu?</p>
         </div>
+        <hr class="faq-separator">
         <div class="faq-copy-questions">
           <p>Treba li instalirat neke programe na laptop prije radionice?<p>
         </div>
+        <hr class="faq-separator">
         <div class="faq-copy-questions">
           <p>Priko čega sve mogu gledati stream?</p>
         </div>
+        <hr class="faq-separator">
         <div class="faq-copy-questions">
           <p>Jesu li radionice/fly talks samo uživo?</p>
         </div>
+        <hr class="faq-separator">
         <div class="faq-copy-questions">
           <p>Discord - kad se može ući na to i kako?</p>
         </div>
+        <hr class="faq-separator">
         <div class="faq-copy-questions">
           <p>Zašto se ne mogu prijaviti mailom i šifrom od prošle godine?</p>
         </div>
