fix job market card

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
               </h1>
             </div>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -797,7 +797,7 @@
               </h1>
             </div>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -827,7 +827,7 @@
               </h1>
             </div>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -857,7 +857,7 @@
               </h1>
             </div>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -889,7 +889,7 @@
             <img class="stylish" src="assets/images/stylish.jpg" />
           </div>
           <div class="middle-card-part2">
-            <div>
+            <div class="mcp2-div">
               <img class="shift-image" src="assets/images/🖥 Desktop.svg" />
               <h1 class="java-dev">
                 Java <br />
@@ -900,7 +900,7 @@
               Saznajte više <img src="assets/images/group1.svg" />
             </p>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -910,7 +910,7 @@
             <img class="stylish" src="assets/images/stylish.jpg" />
           </div>
           <div class="middle-card-part2">
-            <div>
+            <div class="mcp2-div">
               <img class="shift-image" src="assets/images/🖥 Desktop.svg" />
               <h1 class="java-dev">
                 Java <br />
@@ -921,7 +921,7 @@
               Saznajte više <img src="assets/images/group1.svg" />
             </p>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -931,7 +931,7 @@
             <img class="stylish" src="assets/images/stylish.jpg" />
           </div>
           <div class="middle-card-part2">
-            <div>
+            <div class="mcp2-div">
               <img class="shift-image" src="assets/images/🖥 Desktop.svg" />
               <h1 class="java-dev">
                 Java <br />
@@ -942,7 +942,7 @@
               Saznajte više <img src="assets/images/group1.svg" />
             </p>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -952,7 +952,7 @@
             <img class="stylish" src="assets/images/stylish.jpg" />
           </div>
           <div class="middle-card-part2">
-            <div>
+            <div class="mcp2-div">
               <img class="shift-image" src="assets/images/🖥 Desktop.svg" />
               <h1 class="java-dev">
                 Java <br />
@@ -963,7 +963,7 @@
               Saznajte više <img src="assets/images/group1.svg" />
             </p>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -973,7 +973,7 @@
             <img class="stylish" src="assets/images/stylish.jpg" />
           </div>
           <div class="middle-card-part2">
-            <div>
+            <div class="mcp2-div">
               <img class="shift-image" src="assets/images/🖥 Desktop.svg" />
               <h1 class="java-dev">
                 Java <br />
@@ -984,7 +984,7 @@
               Saznajte više <img src="assets/images/group1.svg" />
             </p>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -994,7 +994,7 @@
             <img class="stylish" src="assets/images/stylish.jpg" />
           </div>
           <div class="middle-card-part2">
-            <div>
+            <div class="mcp2-div">
               <img class="shift-image" src="assets/images/🖥 Desktop.svg" />
               <h1 class="java-dev">
                 Java <br />
@@ -1005,7 +1005,7 @@
               Saznajte više <img src="assets/images/group1.svg" />
             </p>
             <div>
-              <img src="assets/images/Group.svg" />
+              <img class="group-icon" src="assets/images/Group.svg" />
               <p>Split</p>
             </div>
           </div>
@@ -1016,7 +1016,7 @@
         <img src="assets/images/Frame 218.png" />
       </div>
     </section>
-    <section class="app-section">
+    <section class="avapp-section">
       <div class="app-section-header">
         Aplikacija
       </div>
