--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
             <img class="stylish" src="assets/images/stylish.jpg" />
           </div>
           <div class="middle-card-part2">
-            <div class="mcp2-div">
+            <div>
               <img class="shift-image" src="assets/images/🖥 Desktop.svg" />
               <h1 class="java-dev">
                 Java <br />
