add missing arrow on mobile

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
               src="assets/images/Live.png"
             />
             <tag class="live-word2">Live</tag>
+            <img class="chevron-mobile" src="assets/images/Chevron.png"/>
           </div>
           <div class="ttec-right">
             <div class="ttex-right-header-wrapper">
@@ -204,6 +205,44 @@
               src="assets/images/Live.png"
             />
             <tag class="live-word2">Live</tag>
+            <img class="chevron-mobile" src="assets/images/Chevron.png"/>
+
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word2">Live</tag>
+
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+            <img class="chevron-mobile" src="assets/images/Chevron.png"/>
+
           </div>
           <div class="ttec-right2">
             <div class="ttex-right-header-wrapper">
@@ -237,6 +276,45 @@
               src="assets/images/Live.png"
             />
             <tag class="live-word2">Live</tag>
+            <img class="chevron-mobile" src="assets/images/Chevron.png"/>
+
+          </div>
+          <div class="ttec-right2">
+            <div class="ttex-right-header-wrapper">
+              <h3>
+                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
+                Miro ima viziju?
+                <img class="yt-icon" src="assets/images/Youtube.png" /><img
+                  class="live-icon"
+                  src="assets/images/Live.png"
+                />
+                <tag class="live-word2">Live</tag>
+
+              </h3>
+              <img class="chevron-icon2" src="assets/images/Chevron.png" />
+            </div>
+
+            <div class="profile-card">
+              <div>
+                <div class="personal-info2">
+                  <p>Ante Matijaca</p>
+                  <p>Creative Director / Co-founder</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tt-ordinary-card">
+          <div class="ttec-left">
+            <p>10:00 - 10:20</p>
+            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
+              class="live-icon2"
+              src="assets/images/Live.png"
+            />
+            <tag class="live-word2">Live</tag>
+            <img class="chevron-mobile" src="assets/images/Chevron.png"/>
+
+
           </div>
           <div class="ttec-right2">
             <div class="ttex-right-header-wrapper">
@@ -270,6 +348,9 @@
               src="assets/images/Live.png"
             />
             <tag class="live-word2">Live</tag>
+            <img class="chevron-mobile" src="assets/images/Chevron.png"/>
+
+
           </div>
           <div class="ttec-right2">
             <div class="ttex-right-header-wrapper">
@@ -303,72 +384,9 @@
               src="assets/images/Live.png"
             />
             <tag class="live-word2">Live</tag>
-          </div>
-          <div class="ttec-right2">
-            <div class="ttex-right-header-wrapper">
-              <h3>
-                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
-                Miro ima viziju?
-                <img class="yt-icon" src="assets/images/Youtube.png" /><img
-                  class="live-icon"
-                  src="assets/images/Live.png"
-                />
-                <tag class="live-word2">Live</tag>
-              </h3>
-              <img class="chevron-icon2" src="assets/images/Chevron.png" />
-            </div>
+            <img class="chevron-mobile" src="assets/images/Chevron.png"/>
 
-            <div class="profile-card">
-              <div>
-                <div class="personal-info2">
-                  <p>Ante Matijaca</p>
-                  <p>Creative Director / Co-founder</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tt-ordinary-card">
-          <div class="ttec-left">
-            <p>10:00 - 10:20</p>
-            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
-              class="live-icon2"
-              src="assets/images/Live.png"
-            />
-            <tag class="live-word2">Live</tag>
-          </div>
-          <div class="ttec-right2">
-            <div class="ttex-right-header-wrapper">
-              <h3>
-                <tag class="first-tag">Dev</tag> Zašto svi problemi započnu kad
-                Miro ima viziju?
-                <img class="yt-icon" src="assets/images/Youtube.png" /><img
-                  class="live-icon"
-                  src="assets/images/Live.png"
-                />
-                <tag class="live-word2">Live</tag>
-              </h3>
-              <img class="chevron-icon2" src="assets/images/Chevron.png" />
-            </div>
 
-            <div class="profile-card">
-              <div>
-                <div class="personal-info2">
-                  <p>Ante Matijaca</p>
-                  <p>Creative Director / Co-founder</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="tt-ordinary-card">
-          <div class="ttec-left">
-            <p>10:00 - 10:20</p>
-            <img class="yt-icon2" src="assets/images/Youtube.png" /><img
-              class="live-icon2"
-              src="assets/images/Live.png"
-            />
-            <tag class="live-word2">Live</tag>
           </div>
           <div class="ttec-right2">
             <div class="ttex-right-header-wrapper">
