--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <img src="./assets/visuals/dd-logo.png" alt="DUMP Days logo" />
       </div>
       <nav class="header-nav">
-        <a href="conference">Konferencija</a>
-        <a href="content">Raspored</a>
-        <a href="speakers">Speakeri</a>
-        <a href="sponsors">Sponzori</a>
-        <a href="contact">Kontakt</a>
+        <a href="#conference">Konferencija</a>
+        <a href="#content">Raspored</a>
+        <a href="#speakers">Speakeri</a>
+        <a href="#sponsors">Sponzori</a>
+        <a href="#contact">Kontakt</a>
         <div>
           <button>PRIJAVI SE</button>
         </div>
@@ -127,13 +127,13 @@
           možeš pratiti i online.
         </p>
         <button id="livestreamButtonDesktop">LIVE STREAM</button>
-        <button id="livestreamButtonMobile">YOU TUBE</button>
+        <button id="livestreamButtonMobile">YOUTUBE</button>
       </div>
       <div class="livestream-img">
         <img src="./assets/visuals/Rectangle.png" alt="live stream image" />
       </div>
     </section>
-    <section class="time-table">
+    <section class="time-table" id="content">
       <h1 class="tt-header">Raspored</h1>
       <div class="tt-dates">
         <div class="tt-buttons-wrapper">
@@ -396,7 +396,7 @@
         </div>
       </div>
     </section>
-    <section class="speakers-section">
+    <section class="speakers-section" id="speakers">
       <div class="speakers-copy">
         <h2>Digitalni inovatori pod istim krovom.</h2>
         <p>Upoznaj renomirane stručnjake koji pokreću IT sutrašnjicu. Poslušaj njihova iskustva i savjete iz prve ruke.</p>
@@ -615,7 +615,7 @@
         zajedno oblikujemo budućnost digitalne generacije.
       </p>
     </section>
-    <section class="golden-sponsors">
+    <section class="golden-sponsors" id="sponsors">
       <h1>Zlatni sponzori</h1>
       <div class="logos-wrapper">
         <img src="assets/images/Component 17.png" />
@@ -1067,7 +1067,7 @@
         <img src="./assets/visuals/testimonial-logo.svg" alt="FIVE">
       </div>
     </section>
-    <section class="gallery">
+    <section class="gallery" id="conference">
       <header class="gallery-header">
         <h2 class="g-header">DUMP Days kroz godine</h2>
         <span class="header-span"
@@ -1328,7 +1328,7 @@
         </form>
       </header>
     </section>
-      <footer class="footer-section">
+      <footer class="footer-section" id="contact">
         <hr>
         <div class="footer-content">
           <div class="footer-rights">
